--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,17 @@
 .header h4 {
     white-space: nowrap;
 }
+
+.title-container{
+    display: flex;
+    align-items: center;
+}
+
+.main-webpage-icon{
+    height: 50px;
+    margin-right: 15px;
+    
+}
 /* HEADER SECTION END */
 
 /* SIDEBAR SECTION START */
@@ -55,9 +66,13 @@
     grid-column: 1/2;
     background-color: #e3dfdf;
     color: black;     
-    min-height: 80vh;
+    height: 80vh;
     padding: 20px 5px 20px 20px;
-    width: 75%;
+    overflow-y: scroll;
+}
+#sidebar-wrapper::-webkit-scrollbar {
+    width: 6px;
+    background-color: transparent;
 }
 
 .sidebarHeading{
@@ -79,8 +94,7 @@
 }
 
 #userProjectSection{
-    overflow-y: auto;
-    
+    overflow-y: auto;    
     max-height: 200px;
 }
 
@@ -98,11 +112,41 @@
 .projectFormContainer{
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .iconSpanContainer{
     display: flex;
     align-items: center;
+}
+
+#cancelNewProject, #saveNewProject     
+{
+   background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+   border: 0;
+   border-radius: 8px;
+   box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+   color: white;
+   font-family: Phantomsans, sans-serif;
+   font-size: 20px;
+   line-height: 1em;
+   text-decoration: none;
+   white-space: nowrap;
+   cursor: pointer;
+   margin: 5px 0 5px 0;
+   padding: 10px;
+
+}
+
+.projectFormContainer input{
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+     border-radius: 20px;
+     border: 1px solid #2d9fd9;
+     color: black;
+     width: 250px;
+     height: 40px;
+     padding-left: 10px;
 }
 /* SIDEBAR SECTION END */
 
@@ -161,3 +205,4 @@
     color: blue;
   }
   
+
