--- a/src/style.css
+++ b/src/style.css
@@ -116,6 +116,16 @@
     justify-content: space-between;
 }
 
+
+
+
+
+.hideProjectTitle{
+    display: none;
+}
+
+
+
 /* SIDEBAR SECTION END */
 
 
@@ -133,7 +143,8 @@
     font-size: 50px;
     border-bottom: 1px solid black;
     width: max-content;
-    margin: auto;
+    margin: 0 auto 40px auto;
+
 }
 .newTaskButton{
     display: flex;
@@ -196,6 +207,7 @@
 .taskCompleteStrike{
     text-decoration: line-through;
 }
+
 
 /* CENTRAL VIEW SECTION END */
 
